--- a/Amazon.ipynb
+++ b/Amazon.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Amazon.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNXQfM5XGWERTu6kanZboeL",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyN2vUeWhGbLHzgWgkxJYXZq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,14 +30,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 668
         },
         "id": "US2oSVtd9bdz",
-        "outputId": "ec0fc778-40da-45e9-ae7a-b3f6c5ba5c81"
+        "outputId": "fd998c20-01e3-4ab9-f802-54d04ad2c024"
       },
       "outputs": [
         {
@@ -49,7 +50,7 @@
               "<img src=\"https://marcas-logos.net/wp-content/uploads/2020/01/Amazon-Logo-1-2048x1279.png\" style=\"padding-right:10px;width:1000px;float:left\"/></td>\n",
               "<h2 style=\"white-space: nowrap\">Business Intelligence and Analytics</h2></td>\n",
               "<hr style=\"clear:both\">\n",
-              "<p style=\"font-size:0.85em; margin:2px; text-align:center\">\n",
+              "<p style=\"font-size:0.85em; margin:2px; text-align:Center\">\n",
               "\n",
               "</div>"
             ],
@@ -67,10 +68,11 @@
         "\n",
         "<div>\n",
         "<td> \n",
-        "<img src=\"https://marcas-logos.net/wp-content/uploads/2020/01/Amazon-Logo-1-2048x1279.png\" style=\"padding-right:10px;width:1000px;float:left\"/></td>\n",
         "<h2 style=\"white-space: nowrap\">Business Intelligence and Analytics</h2></td>\n",
         "<hr style=\"clear:both\">\n",
-        "<p style=\"font-size:0.85em; margin:2px; text-align:justify\">\n",
+        "<p style=\"font-size:0.85em; margin:2px; text-align:Center\">\n",
+        "<img src=\"https://marcas-logos.net/wp-content/uploads/2020/01/Amazon-Logo-1-2048x1279.png\" style=\"padding-right:10px;width:1000px;float:left\"/></td>\n",
+        "\n",
         "\n",
         "</div>"
       ]
