--- a/Amazon.ipynb
+++ b/Amazon.ipynb
@@ -6,7 +6,7 @@
       "name": "Amazon.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPWqny6fbepPEQ2hmsnkI/X",
+      "authorship_tag": "ABX9TyMe8UYzn6LSNoxrtZPWul3K",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,14 +30,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 31,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 668
+          "height": 701
         },
         "id": "US2oSVtd9bdz",
-        "outputId": "dcb869e6-f645-42ff-da0f-4f6a1947dc7d"
+        "outputId": "6a026375-79b3-4564-8b91-bdd4f4c81bec"
       },
       "outputs": [
         {
@@ -47,10 +47,11 @@
               "\n",
               "<div>\n",
               "<td> \n",
-              "<img src=\"https://marcas-logos.net/wp-content/uploads/2020/01/Amazon-Logo-1-2048x1279.png\" style=\"padding-right:1px;width:1000px;float:left\"/></td>\n",
               "<h2 style=\"white-space: nowrap\">Business Intelligence and Analytics</h2></td>\n",
               "<hr style=\"clear:both\">\n",
-              "<p style=\"font-size:0.85em; margin:2px; text-align:Center\">\n",
+              "<p style=\"font-size:0.85em; margin:2px; text-align:center\">\n",
+              "<img src=\"https://marcas-logos.net/wp-content/uploads/2020/01/Amazon-Logo-1-2048x1279.png\" style=\"padding-right:10px;width:1000px;float:left\"/></td>\n",
+              "\n",
               "\n",
               "</div>"
             ],
@@ -68,24 +69,81 @@
         "\n",
         "<div>\n",
         "<td> \n",
-        "<img src=\"https://marcas-logos.net/wp-content/uploads/2020/01/Amazon-Logo-1-2048x1279.png\" style=\"padding-right:1px;width:1000px;float:left\"/></td>\n",
         "<h2 style=\"white-space: nowrap\">Business Intelligence and Analytics</h2></td>\n",
         "<hr style=\"clear:both\">\n",
-        "<p style=\"font-size:0.85em; margin:2px; text-align:Center\">\n",
+        "<p style=\"font-size:0.85em; margin:2px; text-align:center\">\n",
+        "<img src=\"https://marcas-logos.net/wp-content/uploads/2020/01/Amazon-Logo-1-2048x1279.png\" style=\"padding-right:10px;width:1000px;float:left\"/></td>\n",
+        "\n",
         "\n",
         "</div>"
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        ""
+        "## <a class=\"anchor\"></a> Description :\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
-        "id": "Q2Yxm8m6_Kdi"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "qdcsFrci9ibP"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "> **Amazon.com**, Inc is an American multinational technology company based in Seattle, Washington, which focuses on e-commerce, cloud computing, digital streaming, and artificial intelligence.\n",
+        "\n",
+        "> It is one of the Big Five companies in the I.S. information technology industry, along with Google, Apple, Microsoft, and Facebook. The company has been referred to as \"one of the most influential economic and cultural forces in the world\", as well as the world's most valuable brand.\n",
+        "\n",
+        "> **Amazon** was founded by `Jeff Bezos` in **Bellevue, Washington**, on *July 5, 1994.* It started as an online marketplace for books but expanded to sell electronics, software, video games, apparel, furniture, food, toys and jewelry.\n",
+        "\n",
+        "- In 2015, Amazon surpassed Walmart as the most valuable retailer in the United States by market capitalization.\n",
+        "- In 2017, Amazon acquired Whole Foods Market for US$13.4 billion, which substantially increased its footprint as a physical retailer.\n",
+        "- In 2018, its two-day delivery service, Amazon Prime, surpassed 100 million subscribers worldwide.\n",
+        "\n",
+        "Amazon distributes downloads and streaming of video, music and audiobooks through it's [Prime Video](https://www.primevideo.com/), [Twitch](https://www.twitch.tv/), and others. Amazon  also has a cloud computing subsidiary, [Amazon Web Services](https://aws.amazon.com/)."
+      ],
+      "metadata": {
+        "id": "WcfrL84CEtUM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# <a class=\"anchor\"></a> News\n",
+        "- Amazon: The unstoppable rise of the internet giant (read [article](https://www.bbc.co.uk/news/business-55927979))\n",
+        "- Jeff Bezos: Read Amazon founder's letter to employees (read [article](https://edition.cnn.com/2021/02/02/business/jeff-bezos-letter-to-employees))\n"
+      ],
+      "metadata": {
+        "id": "H_NrnwEfEvQ2"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# <a class=\"anchor\"></a> Key Executives"
+      ],
+      "metadata": {
+        "id": "uQlaoELJFI8K"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "| Name | Title | Total compensation |\n",
+        "| :---: | :---: | :---: |\n",
+        "| Mr. Jeffrey P. Bezos | Chief Executive Officer, Director | 1,681 M |\n",
+        "| Mr. Andrew R. Jassy | Chief Executive Officer of Amazon Web Services | 35,61m |\n",
+        "| Mr. Jeffrey Blackburn | Senior Vice-President of Business Development. Entertainment | 22.19M |\n",
+        "|Mr. Jeffrey A. Wilke | Sr. Advisor | 210,725k |"
+      ],
+      "metadata": {
+        "id": "gpK34bfVFL64"
+      }
     },
     {
       "cell_type": "code",
@@ -93,7 +151,7 @@
         ""
       ],
       "metadata": {
-        "id": "qdcsFrci9ibP"
+        "id": "7pjUs_7XGYNR"
       },
       "execution_count": null,
       "outputs": []
