--- a/Amazon.ipynb
+++ b/Amazon.ipynb
@@ -6,7 +6,7 @@
       "name": "Amazon.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMe8UYzn6LSNoxrtZPWul3K",
+      "authorship_tag": "ABX9TyOycha4UbBd3NwNVFAZLOrA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -148,10 +148,43 @@
     {
       "cell_type": "code",
       "source": [
+        "## Videos Before you can find a video from a *recent event**.\n",
+        "%%HTML\n",
+        "<iframer widt=\"560\" height=\"315\" src=\"https://www.youtube.com/watch?v=a9__D53WsUs&t=2s\" frameborder=\"0\"\n",
+        "allow=\"accelerometer: autoplay; clipboard-write, encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        },
+        "id": "7pjUs_7XGYNR",
+        "outputId": "b687f254-98c4-4167-d318-6f7340b5aec9"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<iframer widt=\"560\" height=\"315\" src=\"https://www.youtube.com/watch?v=a9__D53WsUs&t=2s\" frameborder=\"0\"\n",
+              "allow=\"accelerometer: autoplay; clipboard-write, encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         ""
       ],
       "metadata": {
-        "id": "7pjUs_7XGYNR"
+        "id": "zSV0NuM2HzDt"
       },
       "execution_count": null,
       "outputs": []
